Fixes #1021: enhance contrast for links with dark theme;

--- a/client/css/theme.css
+++ b/client/css/theme.css
@@ -44,7 +44,7 @@ body.dark {
 body.dark p a,
 body.dark p a:hover,
 body.dark p a:focus {
-    color: #337AB7;
+    color: #9FD3FF;
     text-decoration: none;
     outline: 0;
 }
